Partial fix for bug 312563: avoid crashing because of recursive updates caused by the code that attempts to notify plugins (via a paint) when their widget is removed from the hierarchy. r=mento.